feat: further work on the details
